# regex

./: pyproject.toml  run.py
.github/workflows/: pylint.yml
engine/: lexer.py  matcher.py  models.py  parser.py
src/regecks/: __init__.py  __main__.py
src/regecks/engine/: __init__.py  matcher.py  parser.py
src/regecks/static/css/: style.css
src/regecks/static/js/: main.js
src/regecks/templates/: index.html
src/regecks/tui/: __init__.py  app.py
src/regecks/web/: app.py  routes.py
src/rx/engine/: lexer.py
src/rx/web/: routes.py
web/: app.py  routes.py
