[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regecks"
version = "0.1.0"
description = "A from-scratch regular expression engine with TUI"
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "flask>=3.0",
    "textual>=0.80",
]

[project.scripts]
regecks = "regecks.__main__:main"

[tool.hatch.build.target.wheel]
packages = ["src/regecks"]

[tool.uv]
python = "3.11"
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
